--- a/library.ui
+++ b/library.ui
@@ -138,7 +138,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab_22">
        <attribute name="title">
@@ -524,6 +524,94 @@
         <property name="text">
          <string>Update</string>
         </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="tab_8">
+       <attribute name="title">
+        <string>Books not returned</string>
+       </attribute>
+       <widget class="QTabWidget" name="tabWidget_4">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>1011</width>
+          <height>451</height>
+         </rect>
+        </property>
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <widget class="QWidget" name="tab_9">
+         <attribute name="title">
+          <string>Student</string>
+         </attribute>
+         <widget class="QTableWidget" name="tableWidget_6">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>1011</width>
+            <height>401</height>
+           </rect>
+          </property>
+          <column>
+           <property name="text">
+            <string>Book Name</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Student name</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>From</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>To</string>
+           </property>
+          </column>
+         </widget>
+        </widget>
+        <widget class="QWidget" name="tab_11">
+         <attribute name="title">
+          <string>Teacher</string>
+         </attribute>
+         <widget class="QTableWidget" name="tableWidget_4">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>10</y>
+            <width>1011</width>
+            <height>401</height>
+           </rect>
+          </property>
+          <column>
+           <property name="text">
+            <string>Book Name</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Teacher Name</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>From</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>To</string>
+           </property>
+          </column>
+         </widget>
+        </widget>
        </widget>
       </widget>
      </widget>
@@ -1475,8 +1563,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>-30</y>
+      <x>840</x>
+      <y>-20</y>
       <width>381</width>
       <height>581</height>
      </rect>
