--- a/library.ui
+++ b/library.ui
@@ -552,7 +552,7 @@
             <x>0</x>
             <y>0</y>
             <width>1011</width>
-            <height>401</height>
+            <height>361</height>
            </rect>
           </property>
           <column>
@@ -576,6 +576,19 @@
            </property>
           </column>
          </widget>
+         <widget class="QPushButton" name="pushButton_47">
+          <property name="geometry">
+           <rect>
+            <x>580</x>
+            <y>370</y>
+            <width>391</width>
+            <height>41</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Export Today Operations To Excel File</string>
+          </property>
+         </widget>
         </widget>
         <widget class="QWidget" name="tab_11">
          <attribute name="title">
@@ -587,7 +600,7 @@
             <x>0</x>
             <y>10</y>
             <width>1011</width>
-            <height>401</height>
+            <height>341</height>
            </rect>
           </property>
           <column>
@@ -610,6 +623,19 @@
             <string>To</string>
            </property>
           </column>
+         </widget>
+         <widget class="QPushButton" name="pushButton_46">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>370</y>
+            <width>391</width>
+            <height>41</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Export Today Operations To Excel File</string>
+          </property>
          </widget>
         </widget>
        </widget>
