--- a/library.ui
+++ b/library.ui
@@ -27,7 +27,7 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="icons.qrc">
+     <iconset>
       <normaloff>:/icons/browse.png</normaloff>:/icons/browse.png</iconset>
     </property>
     <property name="iconSize">
@@ -50,7 +50,7 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="icons.qrc">
+     <iconset>
       <normaloff>:/icons/books.png</normaloff>:/icons/books.png</iconset>
     </property>
     <property name="iconSize">
@@ -73,7 +73,7 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="icons.qrc">
+     <iconset>
       <normaloff>:/icons/settings.png</normaloff>:/icons/settings.png</iconset>
     </property>
     <property name="iconSize">
@@ -96,7 +96,7 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="icons.qrc">
+     <iconset>
       <normaloff>:/icons/themes.png</normaloff>:/icons/themes.png</iconset>
     </property>
     <property name="iconSize">
@@ -1573,7 +1573,7 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="icons.qrc">
+     <iconset>
       <normaloff>:/icons/users.png</normaloff>:/icons/users.png</iconset>
     </property>
     <property name="iconSize">
@@ -1716,14 +1716,14 @@ color: rgb(255, 255, 255);</string>
      <x>0</x>
      <y>0</y>
      <width>1218</width>
-     <height>24</height>
+     <height>28</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="icons.qrc"/>
+  <include location="../e8f3a8c/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
