--- a/library.ui
+++ b/library.ui
@@ -122,7 +122,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -138,7 +138,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab_22">
        <attribute name="title">
@@ -563,6 +563,11 @@
           <column>
            <property name="text">
             <string>Student name</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Class</string>
            </property>
           </column>
           <column>
